02-whoami-tls/whoami-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
  - hosts:
    - ${WHOAMI_NAME}.${ROOT_DOMAIN}
    secretName: whoami-tls
  rules:
    - host: ${WHOAMI_NAME}.${ROOT_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
